--- a/_docs/site-network/Q2_4.md
+++ b/_docs/site-network/Q2_4.md
@@ -1,10 +1,14 @@
 ---
-title: Q2.4 - Upper Rasuhuillca
+title: Q2.4 - Upper Razuhuillca
 permalink: /docs/Q2_4/
 ---
 
 
-### Site Q2.4 - Upper Rasuhuillca
+### Site Q2.4 - Upper Razuhuillca
+
+GPS:
+Elevation:  4060m asl.
+
 
 ![Q2.4](/assets/sites/Q2.4.jpg)
 Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (John Forrest)
@@ -17,9 +21,16 @@ The study site / El lugar del estudio (March 2023) (John Forrest)
 ### Site description
 
 
+
 ### Data analysis
 
-|     Site / Sitio: Q2.4                                   |     March 2023                                          |
+Analytical comments with respect to the data will be posted once a site has been visited at least twice.
+
+### Water quality data
+
+The following river and water quality data was collected from this site:
+
+|     Site / Sitio: Q2.4                                   |     March / marzo 2023                                          |
 |----------------------------------------------------------|---------------------------------------------------------|
 |     Season / Temporada:                                  |     Austral Summer / Verano                             |
 |     Date / Fecha:                                        |     19.3.23                                             |
