--- a/_docs/site-network/Q2_3.md
+++ b/_docs/site-network/Q2_3.md
@@ -6,7 +6,8 @@ permalink: /docs/Q2_3/
 
 ### Site Q2.3 - Lower Razuhuillca
 
-
+GPS: S12°846634, W74°205759. 
+Elevation:  3987m asl.
 
 
 ![Q2.3](/assets/sites/Q2.3.jpg)
