--- a/_docs/site-network/Q2_2.md
+++ b/_docs/site-network/Q2_2.md
@@ -6,6 +6,10 @@ permalink: /docs/Q2_2/
 
 ### Site Q2.2: Middle Huanta - Catarata Occachaca
 
+GPS:  S12°935211, W74°223546. 
+Elevation:  2888m asl.
+ 
+
 ![Q2.2](/assets/sites/Q2.2.jpg)
 Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (John Forrest)
 
@@ -24,9 +28,17 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 ### Site description
 
+
+
 ### Data analysis
 
-|     Site / Sitio: Q2.2                                   |     March 2023                                           |
+Analytical comments with respect to the data will be posted once a site has been visited at least twice.
+
+### Water quality data
+
+The following river and water quality data was collected from this site:
+
+|     Site / Sitio: Q2.2                                   |     March / marzo 2023                                           |
 |----------------------------------------------------------|----------------------------------------------------------|
 |     Season / Temporada:                                  |     Austral Summer / Verano                              |
 |     Date / Fecha:                                        |     18.3.23                                              |
