--- a/_docs/site-network/Q2_1.md
+++ b/_docs/site-network/Q2_1.md
@@ -7,7 +7,7 @@ permalink: /docs/Q2_1/
 ### Site Q2.1: Lower Huanta - Boca Huanta
 
 GPS: S12°906633, W74°250332. 
-Elevation:  m asl.
+Elevation: 2300 m asl.
 
 
 ![Q2.1](/assets/sites/Q2.1.jpg)
