--- a/_docs/site-network/Q3_1.md
+++ b/_docs/site-network/Q3_1.md
@@ -6,6 +6,9 @@ permalink: /docs/Q3_1/
 
 ### Site Q3.1 - Lower Huamanguilla-Iguian - Cangari
 
+GPS: 
+Elevation: 2310m asl.
+
 
 ![Q3.1](/assets/sites/Q3.1.jpg)
 Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (John Forrest)
@@ -26,9 +29,16 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 ### Site description
 
 
+
 ### Data analysis
 
-|     Site / Sitio: Q3.1                                   |     March 2023                                           |
+Analytical comments with respect to the data will be posted once a site has been visited at least twice.
+
+### Water quality data
+
+The following river and water quality data was collected from this site:
+
+|     Site / Sitio: Q3.1                                   |     March / marzo 2023                                           |
 |----------------------------------------------------------|----------------------------------------------------------|
 |     Season / Temporada:                                  |     Austral Summer / Verano                              |
 |     Date / Fecha:                                        |     20.3.23                                              |
