--- a/_docs/site-network/Q3_1.md
+++ b/_docs/site-network/Q3_1.md
@@ -6,7 +6,7 @@ permalink: /docs/Q3_1/
 
 ### Site Q3.1 - Lower Huamanguilla-Iguian - Cangari
 
-GPS: 
+GPS: S12°983733, W74°292386. 
 Elevation: 2310m asl.
 
 
