--- a/_docs/site-network/Q3_2.md
+++ b/_docs/site-network/Q3_2.md
@@ -6,6 +6,10 @@ permalink: /docs/Q3_2/
 
 ### Site Q3.2 - Middle Huamanguilla-Iguian - Puente Ayahuarcuna
 
+GPS: S13°005275, W74°208628. 
+Elevation: 2855m asl.
+
+
 ![Q3.2](/assets/sites/Q3.2.jpg)
 Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (John Forrest)
 
@@ -25,9 +29,16 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 ### Site description
 
 
+
 ### Data analysis
 
-|     Site / Sitio: Q3.2                                   |     March 2023                                     |
+Analytical comments with respect to the data will be posted once a site has been visited at least twice.
+
+### Water quality data
+
+The following river and water quality data was collected from this site:
+
+|     Site / Sitio: Q3.2                                   |     March / marzo 2023                                     |
 |----------------------------------------------------------|----------------------------------------------------|
 |     Season / Temporada:                                  |     Austral Summer / Verano                        |
 |     Date / Fecha:                                        |     22.3.23                                        |
