--- a/_docs/site-network/Q3_3.md
+++ b/_docs/site-network/Q3_3.md
@@ -6,6 +6,10 @@ permalink: /docs/Q3_3/
 
 ### Site Q3.3 - Middle Huamanguilla-Iguian - Yanacocha
 
+GPS:
+Elevation: 4060m asl.
+
+
 ![Q3.3](/assets/sites/Q3.3.jpg)
 Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (John Forrest)
 
@@ -28,9 +32,17 @@ View upstream from the study site / Visita rio arriba del lugar del estudio (Mar
 
 ### Site description
 
+
+
 ### Data analysis
 
-|     Site / Sitio: Q3.3                                   |     March 2023                                   |
+Analytical comments with respect to the data will be posted once a site has been visited at least twice.
+
+### Water quality data
+
+The following river and water quality data was collected from this site:
+
+|     Site / Sitio: Q3.3                                   |     March / marzo 2023                                   |
 |----------------------------------------------------------|--------------------------------------------------|
 |     Season / Temporada:                                  |     Austral Summer / Verano                      |
 |     Date / Fecha:                                        |     23.3.23                                      |
