--- a/_docs/site-network/Q3_3.md
+++ b/_docs/site-network/Q3_3.md
@@ -6,7 +6,7 @@ permalink: /docs/Q3_3/
 
 ### Site Q3.3 - Middle Huamanguilla-Iguian - Yanacocha
 
-GPS:
+GPS: S12°958332, W74°129012. 
 Elevation: 4060m asl.
 
 
