--- a/_docs/site-network/Q1_3.md
+++ b/_docs/site-network/Q1_3.md
@@ -4,7 +4,7 @@ permalink: /docs/Q1_3/
 ---
 
 
-### Site Q1.3: Upper Opanccay
+### Site Q1.3: Upper Opanccay - Yanaraccay
 
 GPS: S12°846634, W74°205759. 
 Elevation: 3965m asl.
@@ -34,9 +34,13 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 Analytical comments with respect to the data will be posted once a site has been visited at least twice.
 
+Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces.
+
 ### Water quality data
 
 The following river and water quality data was collected from this site:
+
+En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
 |     Site / Sitio: Q1.3                                   |     March / marzo 2023                                |
 |----------------------------------------------------------|-----------------------------------------------|
