--- a/_docs/site-network/Q2_4.md
+++ b/_docs/site-network/Q2_4.md
@@ -26,9 +26,13 @@ The study site / El lugar del estudio (March 2023) (John Forrest)
 
 Analytical comments with respect to the data will be posted once a site has been visited at least twice.
 
+Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces.
+
 ### Water quality data
 
 The following river and water quality data was collected from this site:
+
+En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
 |     Site / Sitio: Q2.4                                   |     March / marzo 2023                                          |
 |----------------------------------------------------------|---------------------------------------------------------|
