--- a/_docs/site-network/Q3_2.md
+++ b/_docs/site-network/Q3_2.md
@@ -34,9 +34,13 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 Analytical comments with respect to the data will be posted once a site has been visited at least twice.
 
+Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces.
+
 ### Water quality data
 
 The following river and water quality data was collected from this site:
+
+En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
 |     Site / Sitio: Q3.2                                   |     March / marzo 2023                                     |
 |----------------------------------------------------------|----------------------------------------------------|
