--- a/_docs/site-network/Q3_3.md
+++ b/_docs/site-network/Q3_3.md
@@ -38,9 +38,13 @@ View upstream from the study site / Visita rio arriba del lugar del estudio (Mar
 
 Analytical comments with respect to the data will be posted once a site has been visited at least twice.
 
+Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces.
+
 ### Water quality data
 
 The following river and water quality data was collected from this site:
+
+En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
 |     Site / Sitio: Q3.3                                   |     March / marzo 2023                                   |
 |----------------------------------------------------------|--------------------------------------------------|
