--- a/_docs/site-network/RC02.md
+++ b/_docs/site-network/RC02.md
@@ -34,9 +34,13 @@ Site RC02 - View downstream. (March 2023) (John Forrest)
 
 Analytical comments with respect to the data will be posted once a site has been visited at least twice.
 
+Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces.
+
 ### Water quality data
 
 The following river and water quality data was collected from this site:
+
+En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
 |     Site / Sitio: RC02                                   |     March / marzo 2023                        |
 |----------------------------------------------------------|-----------------------------------------------|
