--- a/_docs/site-network/Q1_1.md
+++ b/_docs/site-network/Q1_1.md
@@ -28,13 +28,20 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 ### Site description
 
+Q1.1 is located in a small valley with a narrow flood-plain cutting through the foothills lining the eastern flank of the Cachi valley, below Huanta. The study site is located about 25 metres above the confluence of the river Opanccay with the river Cachi. Access for taking measurements is best from the right bank when the river level is low. When the river is high it may not be possible to cross the river and measurements would need to be taken from the left bank. 
+
+The right bank site is situated on river deposits so its precise position may vary on a seasonal basis with the shifting of the deposits. A rise and fall in the river level may also impact upon the precise location of the site.
+
+Access is along the left side of the valley through and beyond the small settlement of Iribamba. The road ends at the river Cachi; it is then a 100 metre walk across two fields south along the bank of the river Cachi to the river Opanccay.
+
+(Comments on geology, vegetation and fauna will be added post-future field visits).
 
 
 ### Data analysis
 
-Analytical comments with respect to the data will be posted once a site has been visited at least twice.
+(Analytical comments with respect to the data will be posted once a site has been visited at least twice).
 
-Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces.
+(Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
 ### Water quality data
 
