--- a/_docs/site-network/Q1_2.md
+++ b/_docs/site-network/Q1_2.md
@@ -28,13 +28,22 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 ### Site description
 
+Q1.2 is located in a very narrow valley where the river Opanccay has cut steeply back in to the lower slopes of the sierra Razuhuillca. The study site is situated immediately above a footbridge crossing the river on the trail up to the nearby Sirenachayoc waterfall. A large rock forms the left bank while the right bank formed from stones and silt is less clearly defined.
+
+Access for taking measurements is best from the right bank when the river level is low, however, its  precise position may vary on a seasonal basis with the shifting of the deposits. A rise and fall in the river level may also impact upon the precise location of the site.
+
+Access and parking is from the small settlement of Ñahuinpuquio (where a s/1 per person entry fee is charged to visit the waterfall). The site is located about 750 metres up the trail to the waterfall.
+
+(Comments on geology, vegetation and fauna will be added post-future field visits).
+
+NB. In March 2023, the original intention was to visit a site where the river is bridged by either the  new or old Huanta to Luricocha roads but at both locations there was minimal water in the river that day. These locations will be checked again as potential sites on future visits.
 
 
 ### Data analysis
 
-Analytical comments with respect to the data will be posted once a site has been visited at least twice.
+(Analytical comments with respect to the data will be posted once a site has been visited at least twice).
 
-Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces.
+(Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
 ### Water quality data
 
