--- a/_docs/site-network/Q1_3.md
+++ b/_docs/site-network/Q1_3.md
@@ -28,13 +28,21 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 ### Site description
 
+Q1.3 is located in a broad valley whose sides rapidly begin to rise rapidly so the flood-plain is narrow. 
+
+The study site is situated below a bofedal and an old dam, now in ruins, where an animal track crosses the river. Just above the bofedal, there is a small group of houses known as Yanaraccay.
+
+Access is from the Huanta to Uchuraccay road where a track turns off it and runs down parallel to the river to a scattered group of houses at the top of the valley.
+
+(Comments on geology, vegetation and fauna will be added post-future field visits).
+
 
 
 ### Data analysis
 
-Analytical comments with respect to the data will be posted once a site has been visited at least twice.
+(Analytical comments with respect to the data will be posted once a site has been visited at least twice).
 
-Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces.
+(Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
 ### Water quality data
 
