--- a/_docs/site-network/Q2_1.md
+++ b/_docs/site-network/Q2_1.md
@@ -28,13 +28,20 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 ### Site description
 
+Q2.1 is located in a small valley with a narrow flood-plain cutting through the foothills lining the eastern flank of the Cachi valley, below Huanta. The river Huanta is known as the river Perascucho at this point.
+
+The study site is situated about 200 metres above the confluence of the river Huanta with the river Cachi. Access for taking measurements is best from the right bank when the river level is low. When the river is high it may not be possible to cross the river. A rise and fall in the river level may also impact upon the precise location of the site.
+
+Access is along the right bank of the river down a rough track through and beyond the Hacienda San Jose de Toyas. The road ends about 1km beyond the hacienda amongst scrubby vegetation at the river Cachi.
+
+(Comments on geology, vegetation and fauna will be added post-future field visits).
 
 
 ### Data analysis
 
-Analytical comments with respect to the data will be posted once a site has been visited at least twice.
+(Analytical comments with respect to the data will be posted once a site has been visited at least twice).
 
-Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces.
+(Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
 ### Water quality data
 
