--- a/_docs/site-network/Q2_2.md
+++ b/_docs/site-network/Q2_2.md
@@ -28,13 +28,20 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 ### Site description
 
+Q2.2 is located in a narrow valley where the river Huanta has cut steeply back in to the lower slopes of the sierra Razuhuillca. The study site is situated immediately below the narrowest section containing the Occachaca waterfall as the valley begins to open out, however, as yet, there is no flood-plain.
+
+The study site is situated just upstream of the road bridge at the entrance to the Occachaca waterfall tourist site. Access for taking measurements is best from the left bank but a path accessed across the road bridge, also runs along the right bank facilitating the taking of measurements from both banks.
+
+Access is along the road to the Occachaca waterfall tourist site where it is possible to park in close proximity to the site.
+
+(Comments on geology, vegetation and fauna will be added post-future field visits).
 
 
 ### Data analysis
 
-Analytical comments with respect to the data will be posted once a site has been visited at least twice.
+(Analytical comments with respect to the data will be posted once a site has been visited at least twice).
 
-Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces.
+(Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
 ### Water quality data
 
