--- a/_docs/site-network/Q2_3.md
+++ b/_docs/site-network/Q2_3.md
@@ -28,13 +28,18 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 ### Site description
 
+Q2.3 is located in a fairly wide hanging valley high in the sierra Razuhuillca. The valley slopes are steep sided and there is a small flood-plain.
+
+The study site is situated where the Huanta to Razuhuillca road fords the river – the concrete base of the ford makes it easier to take measurements – about 1km below the village of Razuhuillca. Even if the river level rises, vehicles can provide access to both sides.
+
+(Comments on geology, vegetation and fauna will be added post-future field visits).
 
 
 ### Data analysis
 
-Analytical comments with respect to the data will be posted once a site has been visited at least twice.
+(Analytical comments with respect to the data will be posted once a site has been visited at least twice).
 
-Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces.
+(Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
 ### Water quality data
 
