--- a/_docs/site-network/Q2_4.md
+++ b/_docs/site-network/Q2_4.md
@@ -20,13 +20,20 @@ The study site / El lugar del estudio (March 2023) (John Forrest)
 
 ### Site description
 
+Q2.4 is located high in the sierra Razuhuillca where two fairly wide, steep sided valleys meet.
+
+The study site is situated just above a trout farm at the upper end of the small settlement of Razuhuillca, where water from the Chacacocha reservoir in the higher of the two valleys emerges from a tunnel. The river passes along a narrow cutting for about 25 metres where measurements can be taken. 
+
+Access is from a track running off to the right just beyond the trout farm, from the road running up to the Chacacocha reservoir. The river must be forded to park so taking measurements is undertaken from the left bank. 
+
+(Comments on geology, vegetation and fauna will be added post-future field visits).
 
 
 ### Data analysis
 
-Analytical comments with respect to the data will be posted once a site has been visited at least twice.
+(Analytical comments with respect to the data will be posted once a site has been visited at least twice).
 
-Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces.
+(Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
 ### Water quality data
 
