--- a/_docs/site-network/Q3_1.md
+++ b/_docs/site-network/Q3_1.md
@@ -28,13 +28,20 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 ### Site description
 
+Q3.1 is located in a wide valley with a clear flood-plain cutting through the foothills lining the eastern flank of the Cachi valley, below Huanta. 
+
+The study site is situated where a rough track fords the river Huamanguilla-Iguian about 100 metres upstream from its confluence with the river Cachi. The measurements are best taken at this point and even if the river level is high, vehicles can provide access to both sides.
+
+Access is beyond the settlement of Cangari. A track runs for 300 metres down to the river Cachi and then follows the right bank downstream for about 750 metres before dividing - take the track to the left for a further 100 metres to reach the site.
+
+(Comments on geology, vegetation and fauna will be added post-future field visits).
 
 
 ### Data analysis
 
-Analytical comments with respect to the data will be posted once a site has been visited at least twice.
+(Analytical comments with respect to the data will be posted once a site has been visited at least twice).
 
-Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces.
+(Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
 ### Water quality data
 
