--- a/_docs/site-network/Q3_2.md
+++ b/_docs/site-network/Q3_2.md
@@ -28,13 +28,20 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 ### Site description
 
+Q3.2 is located in a very narrow, steep sided valley where the river has incised around 20 metres in to the landscape.
+
+The study site is situated about 100 metres upstream from the Ayahuarcuna bridge on the Huanta to Ayacucho road and above the point were a small tributary enters the river Huamanguilla-Iguian on the left bank. Access for taking measurements is from the right bank above the confluence with the small tributary, however, its  precise position may vary with a rise in the river level.
+
+Access is down an abandoned track to the left of the Ayahuarcuna bridge looking upstream. NB.This track is often waterlogged for much of its length.
+
+(Comments on geology, vegetation and fauna will be added post-future field visits).
 
 
 ### Data analysis
 
-Analytical comments with respect to the data will be posted once a site has been visited at least twice.
+(Analytical comments with respect to the data will be posted once a site has been visited at least twice).
 
-Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces.
+(Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
 ### Water quality data
 
