--- a/_docs/site-network/Q3_3.md
+++ b/_docs/site-network/Q3_3.md
@@ -32,13 +32,22 @@ View upstream from the study site / Visita rio arriba del lugar del estudio (Mar
 
 ### Site description
 
+Q3.3 is located in a wide, steep sided valley with a clear flood-plain apart from where there are small hills dotting the valley floor.
+
+The study site visited in March 2023 is situated about 1km below the Yanacocha dam and 250 metres from the road. The precise point is where an abandoned track running down from the road curves round a low hill and crosses the river between two small hills.
+
+The site is reached down an old, abandoned track running down from the road in to the valley towards the dam. NB. The upper section of this track is often waterlogged.
+
+NB.In future visits, a more accessible site much lower downstream is likely to be used.
+
+(Comments on geology, vegetation and fauna will be added post-future field visits).
 
 
 ### Data analysis
 
-Analytical comments with respect to the data will be posted once a site has been visited at least twice.
+(Analytical comments with respect to the data will be posted once a site has been visited at least twice).
 
-Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces.
+(Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
 ### Water quality data
 
