--- a/_docs/site-network/RC01.md
+++ b/_docs/site-network/RC01.md
@@ -28,13 +28,20 @@ Site RC01 - View downstream.  (March 2023) (John Forrest)
 
 ### Site descriptions
 
+RC01 is located in the final section of the river Cachi just above its confluence with the river Mantaro. The valley is wider at this point and the flood-plain is up to 150 metres across. The study site is situated on the left bank of the rio Cachi about 200 metres downstream from the Allcomachay bridge. The precise position is opposite a large rock outcrop on the steep right bank and just below the confluence with a small stream entering the rio Cachi on the right bank because there is normally a single channel at this point, whereas above the bridge the channel is braided.
+
+The study site is located on extensive river deposits so its precise position may vary on a seasonal basis with the shifting of the deposits. A rise and fall in the river level may also impact upon the precise location of the site.
+
+It may be possible to drive down on to the river deposits to access the site. If this is not possible, then park in front of the housing at the bridge entrance and walk down.
+
+(Comments on geology, vegetation and fauna will be added post-future field visits).
 
 
 ### Data Analysis
 
-Analytical comments with respect to the data will be posted once the site has been visited at least twice.
+(Analytical comments with respect to the data will be posted once the site has been visited at least twice).
 
-Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces.
+(Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
 ### Water Quality data
 
