--- a/_docs/site-network/RC02.md
+++ b/_docs/site-network/RC02.md
@@ -28,13 +28,22 @@ Site RC02 - View downstream. (March 2023) (John Forrest)
 
 ### Site description
 
+RC02 is located in the Cachi valley beneath the large Allcohuillca hill and upstream from its confluence with the river Huamanguilla-Iguian. The river emerges from a narrower section of the valley, with both the valley and the channel becoming wider at this point.
+
+The study site is situated on the right bank of the river Cachi beneath a footbridge over the river and just downstream from a large rock on which the bridge is supported. There is a single channel at this point.
+
+The site is located on river deposits so its precise position may vary on a seasonal basis with the shifting of the deposits. A rise and fall in the river level may also impact upon the precise location of the site.
+
+It is possible to park on the road running down to the footbridge which is located about 2kms north of Cangari.
+
+(Comments on geology, vegetation and fauna will be added post-future field visits).
 
 
 ### Data analysis
 
-Analytical comments with respect to the data will be posted once a site has been visited at least twice.
+(Analytical comments with respect to the data will be posted once a site has been visited at least twice).
 
-Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces.
+(Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
 ### Water quality data
 
