--- a/_docs/site-network/RC01.md
+++ b/_docs/site-network/RC01.md
@@ -36,6 +36,15 @@ It may be possible to drive down on to the river deposits to access the site. If
 
 (Comments on geology, vegetation and fauna will be added post-future field visits).
 
+RC01 se encuentra en el tramo final del río Cachi, justo rio arriba de su confluencia con el río Mantaro. El valle es más amplio en este punto y la llanura alluvial tiene hasta 150 metros de ancho. El sitio de estudio está situado en la margen izquierda del río Cachi a unos 200 metros aguas abajo del puente Allcomachay. La posición exacta es frente a un a roca grande en la orilla derecha y justo debajo de la confluencia con un pequeño arroyo que entra en el río Cachi por la orilla derecha porque normalmente hay un solo canal en este punto, mientras que por encima del puente el canal está trenzado.
+
+El sitio de muestreo está situado sobre extensos depósitos fluviales, por lo que su posición exacta puede variar estacionalmente con el desplazamiento de los depósitos. Las subidas y bajadas del nivel del río también pueden influir en la ubicación exacta del lugar.
+
+Puede que sea posible bajar con el auto hasta los depósitos fluviales para acceder el sitio. Si no es posible, se puede aparcar delante de las viviendas en la entrada del puente y bajar andando.
+
+(Los comentarios sobre la geología, vegetación y fauna se añadirán tras futuras visitas de campo).
+
+
 
 ### Data Analysis
 
