--- a/_docs/site-network/RC01.md
+++ b/_docs/site-network/RC01.md
@@ -26,7 +26,7 @@ Site RC01 - View upstream.  (March 2023) (John Forrest)
 Site RC01 - View downstream.  (March 2023) (John Forrest)
 
 
-### Site descriptions
+### Site description
 
 RC01 is located in the final section of the river Cachi just above its confluence with the river Mantaro. The valley is wider at this point and the flood-plain is up to 150 metres across. The study site is situated on the left bank of the rio Cachi about 200 metres downstream from the Allcomachay bridge. The precise position is opposite a large rock outcrop on the steep right bank and just below the confluence with a small stream entering the rio Cachi on the right bank because there is normally a single channel at this point, whereas above the bridge the channel is braided.
 
@@ -36,6 +36,9 @@ It may be possible to drive down on to the river deposits to access the site. If
 
 (Comments on geology, vegetation and fauna will be added post-future field visits).
 
+
+### Descripcion del sitio
+
 RC01 se encuentra en el tramo final del río Cachi, justo rio arriba de su confluencia con el río Mantaro. El valle es más amplio en este punto y la llanura alluvial tiene hasta 150 metros de ancho. El sitio de estudio está situado en la margen izquierda del río Cachi a unos 200 metros aguas abajo del puente Allcomachay. La posición exacta es frente a un a roca grande en la orilla derecha y justo debajo de la confluencia con un pequeño arroyo que entra en el río Cachi por la orilla derecha porque normalmente hay un solo canal en este punto, mientras que por encima del puente el canal está trenzado.
 
 El sitio de muestreo está situado sobre extensos depósitos fluviales, por lo que su posición exacta puede variar estacionalmente con el desplazamiento de los depósitos. Las subidas y bajadas del nivel del río también pueden influir en la ubicación exacta del lugar.
@@ -43,7 +46,6 @@ El sitio de muestreo está situado sobre extensos depósitos fluviales, por lo q
 Puede que sea posible bajar con el auto hasta los depósitos fluviales para acceder el sitio. Si no es posible, se puede aparcar delante de las viviendas en la entrada del puente y bajar andando.
 
 (Los comentarios sobre la geología, vegetación y fauna se añadirán tras futuras visitas de campo).
-
 
 
 ### Data Analysis
