--- a/_docs/site-network/RC01.md
+++ b/_docs/site-network/RC01.md
@@ -37,7 +37,7 @@ It may be possible to drive down on to the river deposits to access the site. If
 (Comments on geology, vegetation and fauna will be added post-future field visits).
 
 
-### Descripcion del sitio
+### Descripción del sitio
 
 RC01 se encuentra en el tramo final del río Cachi, justo rio arriba de su confluencia con el río Mantaro. El valle es más amplio en este punto y la llanura alluvial tiene hasta 150 metros de ancho. El sitio de estudio está situado en la margen izquierda del río Cachi a unos 200 metros aguas abajo del puente Allcomachay. La posición exacta es frente a un a roca grande en la orilla derecha y justo debajo de la confluencia con un pequeño arroyo que entra en el río Cachi por la orilla derecha porque normalmente hay un solo canal en este punto, mientras que por encima del puente el canal está trenzado.
 
@@ -54,7 +54,7 @@ Puede que sea posible bajar con el auto hasta los depósitos fluviales para acce
 
 (Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
-### Water Quality data
+### River & Water Quality data / Datos fluviales y de calidad del agua
 
 The following river and water quality data was collected from this site:
 
