--- a/_docs/site-network/RC02.md
+++ b/_docs/site-network/RC02.md
@@ -39,13 +39,26 @@ It is possible to park on the road running down to the footbridge which is locat
 (Comments on geology, vegetation and fauna will be added post-future field visits).
 
 
-### Data analysis
+### Descripción del sitio
+
+RC02 se ubica en el valle de Cachi bajo el gran cerro Allcohuillca y río arriba de su confluencia con el río Huamanguilla-Iguian. El río Cachi emerge de una sección más angosta del valle, y tanto el valle como el canal se vuelven más anchos en este punto.
+
+El sitio de estudio está situado en la margen derecha del río Cachi, debajo de un puente peatonal sobre el río y justo río abajo de una gran roca sobre la que se apoya el puente. En este punto hay un único canal.
+
+El sitio está situado sobre depósitos fluviales, por lo que su posición exacta puede variar estacionalmente con el desplazamiento de los depósitos. Las subidas y bajadas del nivel del río también pueden influir en la ubicación exacta del sitio.
+
+Es posible aparcar en la carretera que baja hasta la pasarela, situada a unos 2 kms al norte de Cangari.
+
+(Los comentarios sobre la geología, vegetación y fauna se añadirán tras futuras visitas de campo).
+
+
+### Data analysis / Análisis de datos
 
 (Analytical comments with respect to the data will be posted once a site has been visited at least twice).
 
 (Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
-### Water quality data
+### Water quality data / Datos fluviales y de calidad del agua
 
 The following river and water quality data was collected from this site:
 
