--- a/_docs/site-network/RC02.md
+++ b/_docs/site-network/RC02.md
@@ -58,7 +58,7 @@ Es posible aparcar en la carretera que baja hasta la pasarela, situada a unos 2 
 
 (Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
-### Water quality data / Datos fluviales y de calidad del agua
+### River & Water quality data / Datos fluviales y de calidad del agua
 
 The following river and water quality data was collected from this site:
 
