--- a/_docs/site-network/Q1_1.md
+++ b/_docs/site-network/Q1_1.md
@@ -36,14 +36,26 @@ Access is along the left side of the valley through and beyond the small settlem
 
 (Comments on geology, vegetation and fauna will be added post-future field visits).
 
+### Descripción del sitio
 
-### Data analysis
+Q1.1 se encuentra en un pequeño valle con una estrecha llanura alluvial que atraviesa las estribaciones que bordean el flanco oriental del valle de Cachi, por debajo de Huanta. 
+
+El sitio de estudio se encuentra a unos 25 metros por encima de la confluencia del río Opanccay con el río Cachi. El acceso para tomar medidas es mejor desde la orilla derecha cuando el nivel del río es bajo. Cuando el nivel del río es alto, puede no ser posible cruzar el río y las mediciones tendrían que realizarse desde la orilla izquierda. 
+
+El emplazamiento de la orilla derecha está situado sobre depósitos fluviales, por lo que su posición exacta puede variar estacionalmente con el desplazamiento de los depósitos. Las subidas y bajadas del nivel del río también pueden influir en la ubicación exacta del emplazamiento.
+
+El acceso se realiza por el lado izquierdo del valle a través y más allá de un pequeño grupo de casa que se llaman Iribamba. La trocha carrozable termina poco antes del río Cachi donde se puede aparcar. Luego, es una caminata de 100 metros a través de dos campos hacia el sur a lo largo de la orilla del río Cachi hasta el río Opanccay.
+
+(Los comentarios sobre la geología, vegetación y fauna se añadirán después de futuras visitas de campo).
+
+
+### Data analysis / Análisis de datos
 
 (Analytical comments with respect to the data will be posted once a site has been visited at least twice).
 
 (Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
-### Water quality data
+### River & water quality data / Datos fluviales y de calidad del agua
 
 The following river and water quality data was collected from this site:
 
