--- a/_docs/site-network/Q1_2.md
+++ b/_docs/site-network/Q1_2.md
@@ -38,14 +38,28 @@ Access and parking is from the small settlement of Ñahuinpuquio (where a s/1 pe
 
 NB. In March 2023, the original intention was to visit a site where the river is bridged by either the  new or old Huanta to Luricocha roads but at both locations there was minimal water in the river that day. These locations will be checked again as potential sites on future visits.
 
+### Descripción del sitio
 
-### Data analysis
+Q1.2 está situado en un valle muy estrecho donde el río Opanccay ha cortado abruptamente en las laderas más bajas de la sierra Razuhuillca. 
+
+El sitio de estudio está situado inmediatamente por encima de un puente que cruza el río en el sendero que sube a la cercana cascada de Sirenachayoc. Una roca forma la orilla izquierda, mientras que la orilla derecha, formada por piedras y limo, está menos claramente definida.
+
+El mejor acceso para realizar mediciones es desde la orilla derecha cuando el nivel del río es bajo; sin embargo, su posición exacta puede variar estacionalmente con el desplazamiento de los depósitos. Las subidas y bajadas del nivel del río también pueden influir en la ubicación exacta del lugar.
+
+El acceso y el aparcamiento se realizan desde el pequeño pueblito de Ñahuinpuquio (donde se cobra una entrada de s/1 por persona para visitar la cascada). El sitio se encuentra a unos 750 metros por el sendero que lleva a la cascada.
+
+(Los comentarios sobre la geología, vegetación y fauna se añadirán tras futuras visitas de campo).
+
+NB. En marzo de 2023, la intención original era visitar un sitio río abajo donde el río es puenteado ya sea por la nueva o antigua carretera de Huanta a Luricocha, pero en ambos lugares había poca agua en el río ese día. Estos lugares serán revisados nuevamente como sitios potenciales en futuras visitas.
+
+
+### Data analysis / Análisis de datos
 
 (Analytical comments with respect to the data will be posted once a site has been visited at least twice).
 
 (Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
-### Water quality data
+### River & water quality data / Datos fluviales y de calidad del agua
 
 The following river and water quality data was collected from this site:
 
